--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+# JWT Configuration
+jwt.secret=iM04EhiN87rtD1EcahH9y78pTJw4CN9rFXJE9lvKT38
+jwt.expiration=1800000
+
+
